--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -1,5 +1,6 @@
 <section>
   <mw-media-item *ngFor="let mItem of mediaItems" 
     [mediaItem]="mItem"
-    (delete)="onMediaItemDelete($event)"></mw-media-item>
+    (delete)="onMediaItemDelete($event)"
+    [ngClass]="{'medium-movies': mItem.medium === 'Movies', 'medium-series': mItem.medium === 'Series'}"></mw-media-item>
 </section>
