Working with Forms

--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -1,4 +1,7 @@
 <section>
+    <header>
+        <div>{{ mediaItems | categoryList }}</div>
+    </header>
   <mw-media-item *ngFor="let mItem of mediaItems" 
     [mediaItem]="mItem"
     (delete)="onMediaItemDelete($event)"
