--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <h1>Media Watch List</h1>
     <p class="description">Keeping Track of the media I want to watch</p>
   </header>
+  <mw-media-item-form></mw-media-item-form>
   <!-- <mw-media-item (delete)="onMediaItemDelete($event)"
   [mediaItem]="firstMediaItem"></mw-media-item> -->
   <mw-media-item-list></mw-media-item-list>
